@@ -5646,9 +5646,14 @@ including the information in the @file{DESCRIPTION} files.
 
 @findex R CMD Sweave
 @findex R CMD Stangle
-@code{R CMD Sweave} and @code{R CMD Stangle} process @samp{Sweave}
-documentation files (usually with extension @samp{.Snw} or @samp{.Rnw}):
-@code{R CMD Stangle} is use to extract the @R{} code fragments.
+@findex R CMD weave
+@findex R CMD tangle
+@code{R CMD weave} and @code{R CMD tangle} process vignette-like
+documentation files (e.g. Sweave vignettes with extension 
+@samp{.Snw} or @samp{.Rnw}, or other non-Sweave vignettes).
+@code{R CMD tangle} is use to extract the @R{} code fragments.  
+For back compatibility, @code{R CMD Sweave} and @code{R CMD Stangle}
+are retained as respective synonyms.
 
 The exact usage and a detailed list of available options for all of
 these commands can be obtained by running @code{R CMD @var{command}
